--- a/QuizServer.cabal
+++ b/QuizServer.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 77151e77a5837cd1b6e40f866f39dfffa2b08705cb1b375a09ba7891ed981efe
+-- hash: b5ad9803941ae6f6c6dee3ea267f3e0320ba2efe9d39d51037144b6b717ee338
 
 name:           QuizServer
 version:        0.1.0.0
@@ -49,8 +49,10 @@ executable QuizServer-exe
     , base >=4.7 && <5
     , directory
     , servant-server
+    , stm
     , text
     , time
+    , transformers
     , wai
     , warp
   default-language: Haskell2010
